// Copyright (c) Improbable Worlds Ltd, All Rights Reserved
package unreal;
import "xCommond.proto";

message TracePayload {
    bytes trace_id = 1;
    bytes span_id = 2;
}

message UnrealRPCPayload {
    uint32 offset = 1;
    uint32 rpc_index = 2;
    bytes rpc_payload = 3;
    optional TracePayload rpc_trace = 4;
    optional uint64 rpc_id = 5;
}

message ACKItem {
    int64 sender = 1;
    uint64 rpc_id = 2;
    uint64 result = 3;
}

message CrossServerRPCInfo {
    int64 sender = 1;
    uint64 rpc_id = 2;
}
