// Copyright (c) Improbable Worlds Ltd, All Rights Reserved
package unreal;
import "xCommond.proto";
import "unreal/gdk/core_types.schema";

message UnrealMetadata {
    enum ComponentID { id = CID_UnrealMetadata; } 
    optional UnrealObjectRef stably_named_ref = 1; // Exists when entity represents a stably named Actor (RF_WasLoaded)
    string class_path = 2;
    optional bool net_startup = 3; // Exists only when entity has a stably_named_ref
}